--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
-  "firebase": "^11.0.0"  <-- 加入這一行 (版本號可以用 11.0.0 或最新的)
+  "firebase": "^11.0.0"  
 },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
